--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,29 @@ body {
   background-color: white;
   height: 100vh;
 }
+.selector-container {
+}
+
+.row {
+  display: flex;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+.center {
+  justify-content: center;
+}
+.align-center {
+  align-items: center;
+}
+.wrap {
+  flex-wrap: wrap;
+}
+h1 {
+  padding: 5px;
+  margin: 0px;
+}
+li {
+  list-style: none;
+}
